--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,5 @@ target/
 src/main/resources/application.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,jetbrains+all,intellij+all,linux,visualstudiocodegit
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
