feat: initial modal

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "react"
     ],
     "rules": {
+        "no-mixed-spaces-and-tabs": 0,
         "indent": [
             "error",
             "tab"
