--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discord_clone",
+  "name": "discord-clone",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,7 @@
     "@livekit/components-styles": "^1.0.6",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
@@ -30,7 +30,6 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@uploadthing/react": "^5.3.0",
     "autoprefixer": "10.4.15",
     "axios": "^1.4.0",
@@ -39,8 +38,6 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
-    "eslint": "^8.51.0",
-    "eslint-config-next": "13.4.12",
     "livekit-client": "^1.13.0",
     "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.268.0",
@@ -65,6 +62,10 @@
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "8.22.0",
+    "eslint-plugin-react": "^7.33.2",
     "prisma": "^5.1.1"
   }
 }
