feat: server sidebar created

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
         "@typescript-eslint",
         "react"
     ],
-    "ignorePatterns": ["**/ui/*.tsx"],
+    "ignorePatterns": ["./prisma/**"],
     "rules": {
         "indent": [
             "error",
