feat: user can send attachment as message now

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     ],
     "ignorePatterns": ["./prisma/**"],
     "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
         "indent": [
             "error",
             "tab"
